Fixes VO-1263 (missing margin between modal buttons).

--- a/app/styles/common/_modals.scss
+++ b/app/styles/common/_modals.scss
@@ -60,6 +60,10 @@
   background-color: $white;
   padding: 12px 0 0 0;
   margin: 12px;
+
+  .btn {
+    margin-left: 5px;
+  }
 }
 
 .modal.search-modal {
